authorization and register
