# internal/app/gophermart/controllers/auth.go
@@ -1,13 +1,17 @@
 package controllers
 
 import (
+	"github.com/IgorChicherin/gophermart/internal/app/gophermart/models"
 	"github.com/IgorChicherin/gophermart/internal/app/gophermart/repositories"
+	"github.com/IgorChicherin/gophermart/internal/pkg/authlib"
 	"github.com/gin-gonic/gin"
+	log "github.com/sirupsen/logrus"
 	"net/http"
 )
 
 type AuthController struct {
 	UserRepository repositories.UserRepository
+	AuthService    authlib.AuthService
 }
 
 func (ac AuthController) Route(api *gin.RouterGroup) {
@@ -26,10 +30,47 @@ func (ac AuthController) Route(api *gin.RouterGroup) {
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Success 200 {json} OK
-// @Router /auth/login [post]
+// @Param input body models.Login true "login"
+// @Success 200
+// @Failure 400,401,500
+// @Router /user/login [post]
 func (ac AuthController) login(c *gin.Context) {
-	c.String(http.StatusOK, "OK")
+	var userData models.Login
+
+	if err := c.ShouldBind(&userData); err != nil {
+		log.Errorln(err)
+		c.AbortWithStatusJSON(http.StatusBadRequest, map[string]string{"error": err.Error()})
+		return
+	}
+
+	hasLogin, err := ac.UserRepository.HasLogin(userData.Login)
+
+	if err != nil {
+		log.Errorln(err)
+		c.Status(http.StatusInternalServerError)
+		return
+	}
+
+	if !hasLogin {
+		c.Status(http.StatusUnauthorized)
+		return
+	}
+
+	user, err := ac.UserRepository.GetUser(userData.Login)
+
+	if err != nil {
+		c.Status(http.StatusInternalServerError)
+		return
+	}
+
+	if !ac.AuthService.Equals(user.Password, userData.Password) {
+		c.Status(http.StatusUnauthorized)
+		return
+	}
+
+	token := ac.AuthService.EncodeToken(user.Login, user.Password)
+	c.SetCookie("token", token, 3600, "/", "localhost", false, true)
+	c.Status(http.StatusOK)
 }
 
 // @BasePath /api
@@ -40,8 +81,43 @@ func (ac AuthController) login(c *gin.Context) {
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Success 200 {json} OK
-// @Router /auth/register [post]
+// @Param input body models.User true "user account"
+// @Success 200
+// @Failure 404,500
+// @Failure 400,409 {object} models.DefaultErrorResponse
+// @Router /user/register [post]
 func (ac AuthController) register(c *gin.Context) {
-	c.String(http.StatusOK, "OK")
+	var userData models.User
+
+	if err := c.ShouldBind(&userData); err != nil {
+		log.Errorln(err)
+		c.AbortWithStatusJSON(http.StatusBadRequest, map[string]string{"error": err.Error()})
+		return
+	}
+
+	hasLogin, err := ac.UserRepository.HasLogin(userData.Login)
+
+	if err != nil {
+		log.Errorln(err)
+		c.Status(http.StatusInternalServerError)
+		return
+	}
+
+	if hasLogin {
+		c.AbortWithStatusJSON(http.StatusConflict, map[string]string{"error": "user with this login has been created"})
+		return
+	}
+
+	createdUser, err := ac.UserRepository.CreateUser(userData.Login, userData.Password)
+
+	if err != nil {
+		log.Errorln(err)
+		c.Status(http.StatusInternalServerError)
+		return
+	}
+
+	token := ac.AuthService.EncodeToken(createdUser.Login, createdUser.Password)
+	c.SetCookie("token", token, 3600, "/", "localhost", false, true)
+
+	c.Status(http.StatusOK)
 }
