# internal/app/gophermart/models/error.go
@@ -1,0 +1,5 @@
+package models
+
+type DefaultErrorResponse struct {
+	Error string `json:"error"`
+}
