# internal/app/gophermart/models/user.go
@@ -1,0 +1,9 @@
+package models
+
+import "time"
+
+type User struct {
+	Login     string    `json:"login"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"created_at,omitempty"`
+}
